[tool.poetry]
name = "boomarked-tweet-to-md"
version = "0.1.0"
description = ""
authors = ["gsajko <grzegorz.sajko@protonmail.com>"]
readme = "README.md"
packages = [{include = "boomarked_tweet_to_md"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.12.0"
chromedriver-autoinstaller = "^0.6.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
black = "^23.9.1"
ruff = "^0.0.290"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data/fuel_data
  )/
)
'''
[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]